--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@xstate/fsm": "^1.6.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.0",
-    "@vue/compiler-sfc": "^3.0.9",
+    "@vitejs/plugin-vue": "^1.2.1",
+    "@vue/compiler-sfc": "^3.0.10",
     "tailwindcss": "^2.0.4",
     "typescript": "^4.1.3",
-    "vite": "^2.1.3",
-    "vite-plugin-windicss": "^0.10.4",
-    "vue-tsc": "^0.0.16"
+    "vite": "^2.1.5",
+    "vite-plugin-windicss": "^0.11.2",
+    "vue-tsc": "^0.0.17"
   }
 }
